# pyannotate-audio-sample

./: pyproject.toml
src/: annote.py
src/til-20231012/: index.md  pyproject.toml  requirements.txt
